--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="IMG-20231031-WA0013.jpg">
-            <h1>Shalini</h1>
+            <h1>Girish Kumar</h1>
             <p> I am a Front End Developer</p>
         </div>
     </header>
