--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="IMG-20231031-WA0013.jpg">
+            <img src="Picsart 23-06-18_19-41-05-158.png">
             <h1>Girish Kumar</h1>
             <p> I am a Front End Developer</p>
         </div>
